force-app/main/default/objects/Booking_Detail__c/Booking_Detail__c.object-meta.xml
<CustomObject>
    <description>This object will be used to store billing related information</description>
    <label>Booking Detail</label>
    <nameField>
        <label>Booking Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booking Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>