force-app/main/default/objects/Booking_Detail__c/fields/Booking_Number__c.field-meta.xml
<CustomField>
    <fullName>Booking_Number__c</fullName>
    <displayFormat>B-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Booking Number</label>
    <type>AutoNumber</type>
</CustomField>