force-app/main/default/objects/Booking_Detail__c/fields/Check_Out_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Date_Time__c</fullName>
    <label>Check Out Date &amp; Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>