force-app/main/default/objects/Booking_Detail__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <label>Customer Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Booking Details</relationshipLabel>
    <relationshipName>Booking_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>