force-app/main/default/objects/Booking_Detail__c/fields/Sepcial_Requests_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sepcial_Requests_Notes__c</fullName>
    <label>Sepcial Requests or Notes</label>
    <type>TextArea</type>
</CustomField>