force-app/main/default/objects/Booking_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Booking_Number__c</columns>
    <columns>NAME</columns>
    <columns>Check_In_Date_Time__c</columns>
    <columns>Check_Out_Date_Time__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Customer_Name__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Number_of_Guests__c</columns>
    <columns>Room_Number__c</columns>
    <columns>Room_Type__c</columns>
    <columns>Sepcial_Requests_Notes__c</columns>
    <columns>Service_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>